Thu Aug 10 17:12:31 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add stub implementations for new methods in OmWritableDatabase,
	  which throw OmUnimplementedError exceptions, so that the python
	  port can proceed.

Thu Aug 10 12:01:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.2.1

Wed Aug  9 17:21:33 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed annoying exception messages from omprogsrv (which turned
	  up in net->absentfile1 test)

Wed Aug  9 17:05:52 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Apitest now runs with the network backend by default.  Two of the
	  tests are only run for the local databases.

Wed Aug  9 15:29:58 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Documentation comment fix in OmMSet.

Wed Aug  9 15:09:14 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Cleaned up the MSet passing internals.  The various get_mset
	  functions now pass things around in OmMSets rather than as parts.

	* mbound now works with network backend.

	* Fixed the match options serialisation.

Wed Aug  9 14:54:30 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add detection of BerkeleyDB version 3.1 to configure.in, ready
	  for new backend.

Tue Aug  8 17:50:47 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Use auto_ptr's and similar to protect TermLists being manipulated by
	  OmExpand so that they're not leaked if an exception happens.

Tue Aug  8 16:36:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add test of mbound.

Tue Aug  8 16:24:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add automatic detection of socklen_t, so that we don't get nasty
	  warnings on Linux just because of solaris.

Tue Aug  8 16:04:09 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Patch to log where connections are from in tcpserver.cc, by