@@ -1,6 +1,7 @@
 #!/usr/bin/python
 from omuscat import *
 import os
+import sys
 
 def create_dir_if_needed(dirname):
     import os
@@ -41,7 +42,7 @@ class BackendManager:
 
 	    if (created):
 	        db = OmWritableDatabase("sleepycat", make_strvec(dbdir))
-		stderr.write("Indexing to " + dbdir)
+		sys.stderr.write("Indexing to " + dbdir)
 		index_files_to_database(db, self.change_names_to_paths(dbnames))
 		# let databases be written as database closed...
 		db = None
@@ -96,3 +97,74 @@ def make_strvec(*strs):
         retval.append(str)
     
     return retval
+
+def do_get_simple_query_mset(query, maxitems = 10, first = 0):
+    enquire = OmEnquire(get_simple_database())
+    init_simple_enquire(enquire, query)
+
+    return enquire.get_mset(first, maxitems)
+
+def get_simple_database():
+    mydb = get_database("apitest_simpledata")
+    return make_dbgrp(mydb)
+
+def index_files_to_database(database, paths):
+    for path in paths:
+        file = open(path, 'r')
+	file.seek(0, 2)  # seek to end
+	len = file.tell()
+	file.seek(0, 0)  # back to beginning
+	while file.tell() < len:
+	    para = get_paragraph(file)
+	    database.add_document(string_to_document(para))
+	
+	file.close()
+
+def get_paragraph(file):
+    para = ""
+    linecount = 0
+    while 1:
+        line = file.readline()
+	if (line == ''):
+	    break
+	
+	para = para + line
+	linecount = linecount+1
+	if (linecount > 30):
+	    break
+	
+	if (linecount >= 3) and (line == '\n'):
+	    break
+    return para
+
+def string_to_document(paragraph):
+    from string import *
+    stemmer = OmStem("english")
+
+    document = OmDocumentContents()
+
+    document.set_data(paragraph)
+
+    for i in range(1, 11):
+        if (i > len(paragraph)):
+	    break
+	else:
+	    document.add_key(i, paragraph[i])
+
+    position = 1
+    while (len(strip(paragraph)) > 0):
+        paragraph = strip(paragraph)
+
+	spacepos = 0
+	while (spacepos < len(paragraph)) and (paragraph[spacepos] not in whitespace):
+	    spacepos = spacepos + 1
+	
+	word = lower(strip(paragraph[0:spacepos]))
+	word = stemmer.stem_word(word)
+	if (len(word) > 0):
+	    document.add_posting(word, position)
+	    position = position + 1
+	
+	paragraph = paragraph[spacepos:]
+
+    return document
